; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_px.c_combo_decrypt.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_px.c_combo_decrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32* }

@PXE_DECRYPT_FAILED = common dso_local global i32 0, align 4
@PXE_NOTBLOCKSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*, i32, i32*, i32*)* @combo_decrypt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @combo_decrypt(%struct.TYPE_3__* %0, i32* %1, i32 %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  store i32* %19, i32** %16, align 8
  %20 = load i32, i32* %9, align 4
  %21 = icmp eq i32 %20, 0
  br i1 %21, label %22, label %31

22:                                               ; preds = %5
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %22
  %28 = load i32, i32* @PXE_DECRYPT_FAILED, align 4
  store i32 %28, i32* %6, align 4
  br label %112

29:                                               ; preds = %22
  %30 = load i32*, i32** %11, align 8
  store i32 0, i32* %30, align 4
  store i32 0, i32* %6, align 4
  br label %112

31:                                               ; preds = %5
  %32 = load i32*, i32** %16, align 8
  %33 = call i32 @px_cipher_block_size(i32* %32)
  store i32 %33, i32* %12, align 4
  %34 = load i32, i32* %12, align 4
  %35 = icmp ugt i32 %34, 1
  br i1 %35, label %36, label %42

36:                                               ; preds = %31
  %37 = load i32, i32* %9, align 4
  %38 = load i32, i32* %12, align 4
  %39 = urem i32 %37, %38
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %42

41:                                               ; preds = %36
  br label %110

42:                                               ; preds = %36, %31
  %43 = load i32, i32* %9, align 4
  %44 = load i32*, i32** %11, align 8
  store i32 %43, i32* %44, align 4
  %45 = load i32*, i32** %16, align 8
  %46 = load i32*, i32** %8, align 8
  %47 = load i32, i32* %9, align 4
  %48 = load i32*, i32** %10, align 8
  %49 = call i32 @px_cipher_decrypt(i32* %45, i32* %46, i32 %47, i32* %48)
  %50 = load i32, i32* %12, align 4
  %51 = icmp ugt i32 %50, 1
  br i1 %51, label %52, label %109

52:                                               ; preds = %42
  %53 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %54 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %53, i32 0, i32 0
  %55 = load i64, i64* %54, align 8
  %56 = icmp ne i64 %55, 0
  br i1 %56, label %57, label %109

57:                                               ; preds = %52
  %58 = load i32*, i32** %10, align 8
  %59 = load i32*, i32** %11, align 8
  %60 = load i32, i32* %59, align 4
  %61 = sub i32 %60, 1
  %62 = zext i32 %61 to i64
  %63 = getelementptr inbounds i32, i32* %58, i64 %62
  %64 = load i32, i32* %63, align 4
  store i32 %64, i32* %14, align 4
  store i32 0, i32* %15, align 4
  %65 = load i32, i32* %14, align 4
  %66 = icmp ugt i32 %65, 0
  br i1 %66, label %67, label %100

67:                                               ; preds = %57
  %68 = load i32, i32* %14, align 4
  %69 = load i32, i32* %12, align 4
  %70 = icmp ule i32 %68, %69
  br i1 %70, label %71, label %100

71:                                               ; preds = %67
  %72 = load i32, i32* %14, align 4
  %73 = load i32*, i32** %11, align 8
  %74 = load i32, i32* %73, align 4
  %75 = icmp ule i32 %72, %74
  br i1 %75, label %76, label %100

76:                                               ; preds = %71
  store i32 1, i32* %15, align 4
  %77 = load i32*, i32** %11, align 8
  %78 = load i32, i32* %77, align 4
  %79 = load i32, i32* %14, align 4
  %80 = sub i32 %78, %79
  store i32 %80, i32* %13, align 4
  br label %81

81:                                               ; preds = %96, %76
  %82 = load i32, i32* %13, align 4
  %83 = load i32*, i32** %11, align 8
  %84 = load i32, i32* %83, align 4
  %85 = icmp ult i32 %82, %84
  br i1 %85, label %86, label %99

86:                                               ; preds = %81
  %87 = load i32*, i32** %10, align 8
  %88 = load i32, i32* %13, align 4
  %89 = zext i32 %88 to i64
  %90 = getelementptr inbounds i32, i32* %87, i64 %89
  %91 = load i32, i32* %90, align 4
  %92 = load i32, i32* %14, align 4
  %93 = icmp ne i32 %91, %92
  br i1 %93, label %94, label %95

94:                                               ; preds = %86
  store i32 0, i32* %15, align 4
  br label %99

95:                                               ; preds = %86
  br label %96

96:                                               ; preds = %95
  %97 = load i32, i32* %13, align 4
  %98 = add i32 %97, 1
  store i32 %98, i32* %13, align 4
  br label %81

99:                                               ; preds = %94, %81
  br label %100

100:                                              ; preds = %99, %71, %67, %57
  %101 = load i32, i32* %15, align 4
  %102 = icmp ne i32 %101, 0
  br i1 %102, label %103, label %108

103:                                              ; preds = %100
  %104 = load i32, i32* %14, align 4
  %105 = load i32*, i32** %11, align 8
  %106 = load i32, i32* %105, align 4
  %107 = sub i32 %106, %104
  store i32 %107, i32* %105, align 4
  br label %108

108:                                              ; preds = %103, %100
  br label %109

109:                                              ; preds = %108, %52, %42
  store i32 0, i32* %6, align 4
  br label %112

110:                                              ; preds = %41
  %111 = load i32, i32* @PXE_NOTBLOCKSIZE, align 4
  store i32 %111, i32* %6, align 4
  br label %112

112:                                              ; preds = %110, %109, %29, %27
  %113 = load i32, i32* %6, align 4
  ret i32 %113
}

declare dso_local i32 @px_cipher_block_size(i32*) #1

declare dso_local i32 @px_cipher_decrypt(i32*, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
